--- a/backend/api/homepage/models/homepage.settings.json
+++ b/backend/api/homepage/models/homepage.settings.json
@@ -27,6 +27,11 @@
       "type": "component",
       "repeatable": true,
       "component": "content.section"
+    },
+    "download": {
+      "type": "component",
+      "repeatable": true,
+      "component": "content.download"
     }
   }
 }
