--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
     "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.35",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.3.28",
     "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.5.14",
     "gatsby-transformer-yaml": "^2.4.11",
+    "gsap": "^3.5.1",
+    "headroom.js": "^0.12.0",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
