Update homepage, add list document under candidate, add video in candidate page

--- a/backend/api/candidate/models/candidate.settings.json
+++ b/backend/api/candidate/models/candidate.settings.json
@@ -34,6 +34,28 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "video": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "poster": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
