--- a/backend/api/homepage/models/homepage.settings.json
+++ b/backend/api/homepage/models/homepage.settings.json
@@ -32,6 +32,11 @@
       "type": "component",
       "repeatable": true,
       "component": "content.download"
+    },
+    "document": {
+      "type": "component",
+      "repeatable": true,
+      "component": "content.document"
     }
   }
 }
